@@ -81,6 +81,7 @@ int init_pthread_lock(pthread_mutex_t *pthread_lock);
 int init_pthread_attr(pthread_attr_t *pattr);
 
 int set_rlimit(int resource, const rlim_t value);
+int set_nonblock(int fd);
 
 #ifdef __cplusplus
 }
